Bug 90396 - [PNV/HSW/BDW/BSW] force restore modeset fails with multiple connectors ( [drm:drm_atomic_helper_check_modeset] enabled/connectors mismatch)
Summary: [PNV/HSW/BDW/BSW] force restore modeset fails with multiple connectors ( [drm...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: highest major
Assignee: Maarten Lankhorst
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 90911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-11 06:55 UTC by Jeff Zheng
Modified: 2017-01-10 12:17 UTC (History)
6 users (show)

See Also:
i915 platform: ALL
i915 features: display/atomic


Attachments
dmesg log (382.32 KB, text/plain)
2015-05-11 06:55 UTC, Jeff Zheng
no flags Details
"xrandr --prop" before S3 (3.37 KB, text/plain)
2015-05-11 06:56 UTC, Jeff Zheng
no flags Details
"xrandr --verbose" before S3 (13.45 KB, text/plain)
2015-05-11 06:57 UTC, Jeff Zheng
no flags Details
"xrandr --prop" after S3 (3.11 KB, text/plain)
2015-05-11 06:57 UTC, Jeff Zheng
no flags Details
"xrandr --verbose" after S3 (13.46 KB, text/plain)
2015-05-11 06:58 UTC, Jeff Zheng
no flags Details
dmesg on HSW (124.14 KB, text/plain)
2015-05-15 10:52 UTC, Jeff Zheng
no flags Details
dmesg on BDW (65.77 KB, text/plain)
2015-05-28 07:34 UTC, xubin
no flags Details
Debug patch (938 bytes, patch)
2015-05-29 11:06 UTC, Ander Conselvan de Oliveira
no flags Details | Splinter Review
run the test again on HSW with patch applied (523.55 KB, text/plain)
2015-06-01 03:26 UTC, xubin
no flags Details
Possible fix (2.94 KB, patch)
2015-06-01 11:24 UTC, Ander Conselvan de Oliveira
no flags Details | Splinter Review
dmesg log with eDP and HDMI connected (352.70 KB, text/plain)
2015-06-05 01:46 UTC, Jeff Zheng
no flags Details
dmesg of hsw (786.92 KB, text/plain)
2015-06-18 07:46 UTC, xubin
no flags Details
dmesg of bsw (614.71 KB, text/plain)
2015-06-18 07:47 UTC, xubin
no flags Details

Description Jeff Zheng 2015-05-11 06:55:26 UTC
Created attachment 115680 [details]
dmesg log

==System Environment==
--------------------------
HDMI monitor: Samsung LS24C570
DP monitor: Dell U2311Hb
BIOS: V59 
Regression: Yes, don't see this issue on drm-intel-testing-2015-04-23
Non-working platforms: BSW

==kernel==
--------------------------
-testing: drm-intel-testing-2015-05-08 (fails)

==Bug detailed description==
-----------------------------
3 monitors are all black screen after xinit + S3. 
3 monitors show text console if running "pkill X"


==Reproduce steps==
---------------------------- 
1. Reboot with 3 monitors connected
2. xinit &
3. echo mem > /sys/power/state
4. Resume by clicking the keyboard
Comment 1 Jeff Zheng 2015-05-11 06:56:39 UTC
Created attachment 115681 [details]
"xrandr --prop" before S3
Comment 2 Jeff Zheng 2015-05-11 06:57:19 UTC
Created attachment 115682 [details]
"xrandr --verbose" before S3
Comment 3 Jeff Zheng 2015-05-11 06:57:58 UTC
Created attachment 115683 [details]
"xrandr --prop" after S3
Comment 4 Jeff Zheng 2015-05-11 06:58:32 UTC
Created attachment 115684 [details]
"xrandr --verbose" after S3
Comment 5 Jeff Zheng 2015-05-11 08:03:01 UTC
This issue also exists on eDP + HDMI.
Comment 6 Jeff Zheng 2015-05-11 10:17:28 UTC
Bisect to commit 6c373ca89399c5a3f7ef210ad8f63dc3437da345 but booting fails with huge messages on console.
Comment 7 Jeff Zheng 2015-05-15 10:52:34 UTC
Created attachment 115799 [details]
dmesg on HSW

On HSW, when connect to DP monitor, xinit + S3 will also fail.
Comment 8 Jeff Zheng 2015-05-25 07:59:45 UTC
exists on drm-intel-testing-2015-05-22 with BSW
Comment 9 xubin 2015-05-28 07:34:59 UTC
Created attachment 116109 [details]
dmesg on BDW
Comment 10 xubin 2015-05-28 07:35:48 UTC
This issue still exists on BDW with drm-intel-testing-2015-05-22 kernel
Comment 11 Ander Conselvan de Oliveira 2015-05-29 11:06:46 UTC
Created attachment 116146 [details] [review]
Debug patch

The "CRTC fixup failed" line in the HSW log indicates intel_crtc_compute_config() fails after resume. And that means the modeset is aborted before the new pipe config is dumped to the log, which would give us a clue as to why it failed.

Can you run the test again on HSW with this patch applied, and also with "drm.debug=0x1e log_buf_len=4M" in the kernel command line?
Comment 12 xubin 2015-06-01 03:26:30 UTC
Created attachment 116194 [details]
run the test again on HSW with patch applied
Comment 13 Ander Conselvan de Oliveira 2015-06-01 11:24:51 UTC
Created attachment 116198 [details] [review]
Possible fix

Could you try if the attached patch fixes the issue?
Comment 14 xubin 2015-06-02 09:15:57 UTC
Test with the patch,connect with three monitor(DP,eDP,HDMI),except eDP,the other two can't display.
Comment 15 Ander Conselvan de Oliveira 2015-06-02 10:00:32 UTC
(In reply to xubin from comment #14)
> Test with the patch,connect with three monitor(DP,eDP,HDMI),except eDP,the
> other two can't display.

Can you add dmesg (with debug information) for this failure?
Comment 16 Jeff Zheng 2015-06-04 06:36:56 UTC
I retry on x-hswm24 with HDMI monitor connected. 

With drm-intel-testing-2015-05-22, after S3, eDP shows X and HDMI is black screen. system is alive.
With drm-intel-testing-2015-05-22 + patch, after S3, eDP shows X and HDMI is black screen too. And system hangs. Unfortunately the test machine does not have serial port so there is no dmesg captured.
Comment 17 Ander Conselvan de Oliveira 2015-06-04 10:29:32 UTC
The fix I wrote is superseded by Maarten's latest atomic patch series that has been just merged. Could you test with latest -nightly?
Comment 18 Jeff Zheng 2015-06-05 01:46:28 UTC
Created attachment 116295 [details]
dmesg log with eDP and HDMI connected

I retry latest nightly (commit 0761e2d5d55e8311950514fda1ec414838525985) on x-hswm24 with eDP/HDMI connected, after resuming from S3, both eDP and HDMI are fine.
Comment 19 Ander Conselvan de Oliveira 2015-06-05 07:01:57 UTC
(In reply to Jeff Zheng from comment #18)
> Created attachment 116295 [details]
> dmesg log with eDP and HDMI connected
> 
> I retry latest nightly (commit 0761e2d5d55e8311950514fda1ec414838525985) on
> x-hswm24 with eDP/HDMI connected, after resuming from S3, both eDP and HDMI
> are fine.

So that's fixed in nightly, good. But I'm afraid the issue might exist with the drm-intel-next branch. Could you verify?
Comment 20 Jeff Zheng 2015-06-05 07:27:39 UTC
Not yet. I need to double check with BSW.

And we find that latest nightly might have a big regression. When boot BSW with both eDP and DP connected, both monitors are black screen.

We're double checking to report an new bug.

When that issue got fixed, I will check on BSW again.
Comment 21 Jeff Zheng 2015-06-08 01:16:54 UTC
Will update after Bug 90861 got fixed.
Comment 22 Ander Conselvan de Oliveira 2015-06-09 08:26:58 UTC
(In reply to Ander Conselvan de Oliveira from comment #19)
> But I'm afraid the issue might exist with the drm-intel-next branch.

That should have been drm-intel-next-fixes.
Comment 23 Ander Conselvan de Oliveira 2015-06-10 06:34:36 UTC
*** Bug 90911 has been marked as a duplicate of this bug. ***
Comment 24 Jeff Zheng 2015-06-12 05:47:08 UTC
I tried on BSW for several commits:

exist in drm-intel-next-fixes commit bf546f8158e2df2656494a475e6235634121c87c
exists in drm-intel-testing-2015-05-22
Fail to boot in latest nightly because of bug 90929
exist in drm-intel-nightly commit d57981d00ed80a859c24fe937c70959dd646e439 (the commit before 3bae26eb2991c00670df377cf6c3bc2b0577e82a)
Comment 25 Jani Nikula 2015-06-17 12:16:14 UTC
Please retest on current drm-intel-nightly.
Comment 26 xubin 2015-06-18 07:46:01 UTC
Created attachment 116571 [details]
dmesg of hsw

Test with the latest drm-intel-nightly kernel(commit 2a36ab374449e3794b4be6be01f1a47cb6ee5b83) on HSW platform with 3 monitor (two DP,one VGA),only one DP can resume normally. Then pkill x ,the three monitor show text mode.
Comment 27 xubin 2015-06-18 07:47:45 UTC
Created attachment 116572 [details]
dmesg of bsw

Test with the latest drm-intel-nightly kernel(commit 2a36ab374449e3794b4be6be01f1a47cb6ee5b83) on BSW platform with 3 monitor (one DP,one eDP,one VGA),only eDP can resume normally. Then pkill x ,the three monitor come to text console.
Comment 28 Ander Conselvan de Oliveira 2015-06-18 08:11:12 UTC
The fix we have in -next-fixes for this will conflict with Maarten's next series of atomic modesetting patches which should also fix this.
Comment 29 ye.tian 2015-06-19 06:35:31 UTC
Test it on BDW with latest drm-intel-next-fixes_4ed9fb_20150618+ kernel, S3 will automatic back, 3 monitors can light up.
Comment 30 Gavin Hindman 2015-07-08 14:26:06 UTC
Has Maarten's fix for this landed?
Comment 31 Maarten Lankhorst 2015-07-08 15:10:53 UTC
Not yet, it's on the mailing list.
Comment 32 Ander Conselvan de Oliveira 2015-08-04 10:52:28 UTC
Maarten's patches that fix this are in -nightly now.
Comment 33 Jari Tahvanainen 2017-01-10 12:17:35 UTC
Closing resolved+fixed after 1.5 years of silence.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.